--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_screenutil: ^5.9.3
   flutter_svg: ^2.2.3
   google_fonts: ^8.0.0
+  shared_preferences: ^2.5.4
 
 dev_dependencies:
   flutter_test:
